--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "postbuild": "node ./scripts/postbuild.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "lint-fix": "eslint src/**/*.js --fix",
+    "precommit": "npm run lint-fix"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +48,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1"
   }
 }
